--- a/src/main/resources/templates/kuangjia/frame.html
+++ b/src/main/resources/templates/kuangjia/frame.html
@@ -30,7 +30,7 @@
 								<dd><a class="to-url" data-url="/teachers/list" href="javascript:;">师资队伍</a></dd>
 								<dd><a class="to-url" data-url="/learning/list" href="javascript:;">学习效果</a></dd>
 								<dd><a class="to-url" data-url="/setinfo/lunbo" href="javascript:;">轮播导航</a></dd>
-								<dd><a class="to-url" data-url="/newsinfo/list" href="javascript:;">平台公告</a></dd>
+								<dd><a class="to-url" data-url="/newsinfoback/list" href="javascript:;">平台公告</a></dd>
 								<dd><a class="to-url" data-url="/setinfo/addus" href="javascript:;">关于我们</a></dd>
 							</dl>
 						</li>
