--- a/src/main/resources/templates/shouye/notice_add.html
+++ b/src/main/resources/templates/shouye/notice_add.html
@@ -40,7 +40,7 @@
 
 
 	<!--标题-->
-	<form class="layui-form" action="/newsinfo/add" method="post">
+	<form class="layui-form" action="/newsinfoback/add" method="post">
 		<div class="layui-form-item">
 			<label class="layui-form-label">标题</label>
 			<div class="layui-input-block">
