--- a/src/main/resources/templates/kuangjia/frame.html
+++ b/src/main/resources/templates/kuangjia/frame.html
@@ -26,12 +26,12 @@
 						<li class="layui-nav-item">
 							<a href="javascript:;"><i class="layui-icon layui-icon-home"></i>首页设置</a>
 							<dl class="layui-nav-child">
-								<dd><a class="to-url" data-url="/setinfo/addplat" href="javascript:;">平台介绍</a></dd>
+								<dd><a class="to-url" data-url="/setinfoback/addplat" href="javascript:;">平台介绍</a></dd>
 								<dd><a class="to-url" data-url="/teachers/list" href="javascript:;">师资队伍</a></dd>
 								<dd><a class="to-url" data-url="/learning/list" href="javascript:;">学习效果</a></dd>
-								<dd><a class="to-url" data-url="/setinfo/lunbo" href="javascript:;">轮播导航</a></dd>
+								<dd><a class="to-url" data-url="/setinfoback/lunbo" href="javascript:;">轮播导航</a></dd>
 								<dd><a class="to-url" data-url="/newsinfoback/list" href="javascript:;">平台公告</a></dd>
-								<dd><a class="to-url" data-url="/setinfo/addus" href="javascript:;">关于我们</a></dd>
+								<dd><a class="to-url" data-url="/setinfoback/addus" href="javascript:;">关于我们</a></dd>
 							</dl>
 						</li>
 						<li class="layui-nav-item">
