--- a/src/main/resources/templates/home_page/header.html
+++ b/src/main/resources/templates/home_page/header.html
@@ -21,7 +21,7 @@
 			<li><a href="/newsinfo/newslist">首页</a></li>
 			<li><a href="/choose/course/list">实验大厅</a></li>
 			<li><a href="/setinfo/situation">平台概况</a></li>
-			<li><a href="/teachers/frontList">师资队伍</a></li>
+			<li><a href="/teachersfront/frontList">师资队伍</a></li>
 			<li><a href="/question/list">咨询答疑</a></li>
 			<li><a href="/learningfront/learningList">学习效果</a></li>
 		</ul>
