隐藏模块报告管理

--- a/src/main/resources/templates/shiyan/lookTestAndReport.html
+++ b/src/main/resources/templates/shiyan/lookTestAndReport.html
@@ -112,7 +112,8 @@
                                     <td class="td-manage">
                                         <a type="layui-btn" class="layui-btn layui-bg-green" th:href="@{|/shiyan/list/${list.getM_id()}|}">查看实验测试</a>
                                         <!--<i class="layui-icon">&#xe640;</i>-->
-                                        <a type="layui-btn" class="layui-btn layui-bg-green" onclick="del(this)" th:href="@{|/shiyan/reportList/${list.getM_id()}|}">查看实验报告</a>
+<!--                                        暂时隐藏实验报告-->
+<!--                                        <a type="layui-btn" class="layui-btn layui-bg-green" onclick="del(this)" th:href="@{|/shiyan/reportList/${list.getM_id()}|}">查看实验报告</a>-->
                                     </td>
                                   </tr>
                                 </tbody>
