--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,96 +1,99 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<title>账号注册</title>		
-		<link rel="stylesheet" href="../static/css/layui.css">
-	</head>
-    <style type="text/css">
-        #b{
-            float: right;
-            margin: 10px 0;
-        }
-        .layui-input{
-            width: 50%;
-        }
-    </style>
-	<body>
-		<div class="layui-tab layui-tab-brief" lay-filter="docDemoTabBrief">
-            <ul class="layui-tab-title">
-                <li class="layui-this">账号注册</li>
-            </ul>
-            <form class="layui-tab-content" method="post" th:action="@{/register}">
-            	<div class="layui-tab-item layui-show">
-    	            <div id="l1" class="layui-col-md8 layui-col-md-offset2">
-    	            	<div class="layui-form-item">
-                            <label class="layui-form-label">账号：</label>
-                            <div class="layui-input-block">
-                                <input type="text" name="account" required  lay-verify="required" placeholder="请输入账号" autocomplete="off" class="layui-input">
-                                <p th:text="${msg1}" style="color: red"></p>
-<!--                                <div th:errors="${student2.account}"></div>-->
-                            </div>
-                        </div>
-                        <div class="layui-form-item">
-                            <label class="layui-form-label">密码：</label>
-                            <div class="layui-input-block">
-                                <input type="text" name="pass" required  lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input">
-                            </div>
-                        </div>
-                        <div class="layui-form-item">
-                            <label class="layui-form-label">确认密码：</label>
-                            <div class="layui-input-block">
-                                <input type="text" name="password" required  lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input">
-                                <p th:text="${msg3}" style="color: red"></p>
-                            </div>
-                        </div>
-                        <div class="layui-form-item">
-                            <label class="layui-form-label">手机号：</label>
-                            <div class="layui-input-block">
-                                <input type="text" name="tel" required  lay-verify="required" placeholder="请输入手机号" autocomplete="off" class="layui-input">
-                                <p th:text="${telmsg}" style="color: red"></p>
-                            </div>
-                        </div>
-                        <div class="layui-form-item">
-                            <label class="layui-form-label">学号：</label>
-                            <div class="layui-input-block">
-                                <input type="text"  name="stu_xuehao"   lay-verify="required" placeholder="请输入学号" autocomplete="off" class="layui-input">
-                                <p style="color: darkgray">（非必填）</p>
-                                <p th:text="${xuehaomsg}" style="color: red"></p>
-                            </div>
-                        </div>
-                        <div class="layui-form-item">
-                            <label class="layui-form-label">姓名：</label>
-                            <div class="layui-input-block">
-                                <input type="text"  name="name"   lay-verify="required" placeholder="请输入姓名" autocomplete="off" class="layui-input">
-                            </div>
-                        </div>
-<!--
-<!--                        <div class="layui-form-item">-->
-<!--                            <label class="layui-form-label">是否在校：</label>-->
-<!--                            <div class="layui-input-block">-->
-<!--                                <input type="text" name="stu_isinschool" required  lay-verify="required" placeholder="0外校，1本校" autocomplete="off" class="layui-input">-->
-<!--                            </div>-->
-<!--                        </div>-->
-                        <label class="layui-form-label">是否在校：</label>
-                        <div style="margin-top: 3%;">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>账号注册</title>
+    <link rel="stylesheet" href="../static/css/layui.css">
+</head>
+<style type="text/css">
+    #b {
+        float: right;
+        margin: 10px 0;
+    }
 
-                            <label><input name="stu_isinschool" type="radio" checked="checked" value="1" />是 </label>  &nbsp;&nbsp;&nbsp;&nbsp;
-                            <label><input name="stu_isinschool" type="radio" value="0" />否 </label>
-                        </div>
+    .layui-input {
+        width: 50%;
+    }
+</style>
+<body>
+<div class="layui-tab layui-tab-brief" lay-filter="docDemoTabBrief">
+    <ul class="layui-tab-title">
+        <li class="layui-this">账号注册</li>
+    </ul>
+    <form class="layui-tab-content" method="post" th:action="@{/register}">
+        <div class="layui-tab-item layui-show">
+            <div id="l1" class="layui-col-md8 layui-col-md-offset2">
+                <div class="layui-form-item">
+                    <label class="layui-form-label">学号：</label>
+                    <div class="layui-input-block">
+                        <input type="text" name="stu_xuehao" required lay-verify="required"
+                               placeholder="请输入学号"
+                               autocomplete="off" class="layui-input">
+                        <p style="color: darkgray">（必填真实学号）</p>
+                        <p th:text="${xuehaomsg}" style="color: red"></p>
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <label class="layui-form-label">姓名：</label>
+                    <div class="layui-input-block">
+                        <input type="text" name="nickname" required lay-verify="required" placeholder="请输入姓名" autocomplete="off"
+                               class="layui-input">
+                    </div>
 
-                        <div class="layui-btn-container" style="text-align: center;">
-                            <button type="submit" class="layui-btn" style="margin-top: 5%;margin-left: -40%;">注册并登录</button>
-                        </div>
-    	            </div>
+                </div>
+                <div class="layui-form-item">
+                    <label class="layui-form-label">密码：</label>
+                    <div class="layui-input-block">
+                        <input type="password" name="pass" required lay-verify="required" placeholder="请输入密码"
+                               autocomplete="off" class="layui-input">
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <label class="layui-form-label">确认密码：</label>
+                    <div class="layui-input-block">
+                        <input type="password" name="password" required lay-verify="required" placeholder="请输入密码"
+                               autocomplete="off" class="layui-input">
+                        <p th:text="${msg3}" style="color: red"></p>
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <label class="layui-form-label">手机号：</label>
+                    <div class="layui-input-block">
+                        <input type="text" name="tel" required lay-verify="required" placeholder="请输入手机号"
+                               autocomplete="off" class="layui-input">
+                        <p th:text="${telmsg}" style="color: red"></p>
+                    </div>
+                </div>
+                <div class="layui-btn-container" style="text-align: center;">
+                    <button type="submit" class="layui-btn" style="margin-top: 5%;margin-left: -40%;">注册并登录</button>
                 </div>
 
-            </form>
-        </div>      
-			
-		
-		<script src="../static/js/layui.all.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../static/js/layui.js" type="text/javascript" charset="utf-8"></script>
-	</body>
+                <label class="layui-form-label" style="visibility: hidden">是否在校：</label>
+                <div style="visibility: hidden">
+
+                    <label><input name="stu_isinschool" type="radio" checked="checked" value="1"/>是 </label> &nbsp;&nbsp;&nbsp;&nbsp;
+                    <label><input name="stu_isinschool" type="radio" value="0"/>否 </label>
+                </div>
+
+                <div class="layui-form-item" style="visibility: hidden;">
+                    <label class="layui-form-label">账号：</label>
+                    <div class="layui-input-block">
+                        <input type="text" name="account"  placeholder="请输入账号"
+                               autocomplete="off" class="layui-input">
+                        <p th:text="${msg1}" style="color: red"></p>
+                        <!--                                <div th:errors="${student2.account}"></div>-->
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </form>
+</div>
+
+
+<script src="../static/js/layui.all.js" type="text/javascript" charset="utf-8"></script>
+<script src="../static/js/layui.js" type="text/javascript" charset="utf-8"></script>
+</body>
 </html>
