教师账号管理加入了分页功能

--- a/src/main/resources/templates/user/add.html
+++ b/src/main/resources/templates/user/add.html
@@ -36,23 +36,23 @@
 					<input type="text" th:field="${user.gonghao}" lay-verify="required" autocomplete="off" placeholder="请输入教师工号" class="layui-input" />
 				</div>
 			</div>
-			<div class="layui-form-item">
-				<label class="layui-form-label">密码</label>
-				<div class="layui-input-block">
-					<input type="password" th:field="${user.password}" lay-verify="required" autocomplete="off" class="layui-input" />
-				</div>
-			</div>
-			<div class="layui-form-item">
-				<div class="layui-inline">
-					<label class="layui-form-label">状态</label>
-					<div class="layui-input-inline">
-						<select th:field="${user.status}" lay-verify="required">
-							<option value="0">启用</option>
-							<option value="1">停用</option>
-						</select>
-					</div>
-				</div>
-			</div>
+<!--			<div class="layui-form-item">-->
+<!--				<label class="layui-form-label">密码</label>-->
+<!--				<div class="layui-input-block">-->
+<!--					<input type="password" th:field="${user.password}" lay-verify="required" autocomplete="off" class="layui-input" />-->
+<!--				</div>-->
+<!--			</div>-->
+<!--			<div class="layui-form-item">-->
+<!--				<div class="layui-inline">-->
+<!--					<label class="layui-form-label">状态</label>-->
+<!--					<div class="layui-input-inline">-->
+<!--						<select th:field="${user.status}" lay-verify="required">-->
+<!--							<option value="0">启用</option>-->
+<!--							<option value="1">停用</option>-->
+<!--						</select>-->
+<!--					</div>-->
+<!--				</div>-->
+<!--			</div>-->
 			<div class="layui-form-item" pane="">
 				<label class="layui-form-label">角色</label>
 				<div class="layui-input-block">
