--- a/src/main/resources/templates/user/update.html
+++ b/src/main/resources/templates/user/update.html
@@ -36,23 +36,6 @@
 					<input type="text" th:field="${user.gonghao}" lay-verify="required" autocomplete="off" placeholder="请输入教师工号" class="layui-input" />
 				</div>
 			</div>
-			<div class="layui-form-item">
-				<label class="layui-form-label">密码</label>
-				<div class="layui-input-block">
-					<input type="password" th:field="${user.password}" lay-verify="required" autocomplete="off" class="layui-input" />
-				</div>
-			</div>
-			<div class="layui-form-item">
-				<div class="layui-inline">
-					<label class="layui-form-label">状态</label>
-					<div class="layui-input-inline">
-						<select th:field="${user.status}" lay-verify="required">
-							<option value="0">启用</option>
-							<option value="1">停用</option>
-						</select>
-					</div>
-				</div>
-			</div>
 			<div class="layui-form-item" pane="">
 				<label class="layui-form-label">角色</label>
 				<input type="hidden" th:each="hr:${hasRole}" class="hasRole" name="hasRole" th:value="${hr}" />
@@ -66,6 +49,24 @@
 					<button type="button" class="layui-btn layui-btn-primary" id="closeIframe">返回</button>
 				</div>
 			</div>
+<!--			<div class="layui-form-item">-->
+<!--				<label class="layui-form-label">密码</label>-->
+<!--				<div class="layui-input-block">-->
+<!--					<input type="password" th:field="${user.password}" lay-verify="required" autocomplete="off" class="layui-input" />-->
+<!--				</div>-->
+<!--			</div>-->
+<!--			<div class="layui-form-item">-->
+<!--				<div class="layui-inline">-->
+<!--					<label class="layui-form-label">状态</label>-->
+<!--					<div class="layui-input-inline">-->
+<!--						<select th:field="${user.status}" lay-verify="required">-->
+<!--							<option value="0">启用</option>-->
+<!--							<option value="1">停用</option>-->
+<!--						</select>-->
+<!--					</div>-->
+<!--				</div>-->
+<!--			</div>-->
+
 		</form>
 		<script src="//cdn.staticfile.org/jquery/1.8.0/jquery.min.js"></script>
 		<script src="//cdn.staticfile.org/layui/2.5.6/layui.all.min.js"></script>
