--- a/src/main/resources/templates/student/student_list.html
+++ b/src/main/resources/templates/student/student_list.html
@@ -46,7 +46,7 @@
                                 <div class="layui-inline layui-show-xs-block">
                                 </div>
                                 <div class="layui-inline layui-show-xs-block">
-                                    <input type="text" name="stu_xuehao"  placeholder="请输入学号或者姓名" autocomplete="off"  class="layui-input">
+                                    <input type="text" name="stu_xuehao"  placeholder="请输入学号或者姓名" autocomplete="off"  class="layui-input" th:value="${stu_xuehao}">
                                 </div>
                                 <div class="layui-inline layui-show-xs-block">
                                     <input class="layui-btn" type="submit" lay-submit="" lay-filter="sreach" value="搜索"/>
