--- a/src/main/resources/templates/kuangjia/nocoursechoose.html
+++ b/src/main/resources/templates/kuangjia/nocoursechoose.html
@@ -1,60 +1,60 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="x-ua-compatible" content="IE=edge,chrome=1"/>
-    <meta name="renderer" content="webkit"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>选择课程 - 旅游大数据虚拟仿真实验教学平台</title>
-    <link rel="stylesheet" href="../../static/new/css/reset.css"/>
-    <link rel="stylesheet" href="//cdn.staticfile.org/layui/2.5.6/css/layui.min.css"/>
-    <link rel="stylesheet" href="../../static/new/css/select.css"/>
+	<meta charset="UTF-8"/>
+	<meta http-equiv="x-ua-compatible" content="IE=edge,chrome=1"/>
+	<meta name="renderer" content="webkit"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	<title>选择课程 - 旅游大数据虚拟仿真实验教学平台</title>
+	<link rel="stylesheet" href="../../static/new/css/reset.css"/>
+	<link rel="stylesheet" href="//cdn.staticfile.org/layui/2.5.6/css/layui.min.css"/>
+	<link rel="stylesheet" href="../../static/new/css/select.css"/>
 </head>
 <body>
 <div class="layui-layout layui-layout-admin">
-    <div class="layui-header">
-        <div class="top-logo cl">
-            <img src="../../static/new/images/sctu_w.png"/>
-            <p>旅游大数据虚拟仿真实验教学平台</p>
-            <span>实验中心</span>
-        </div>
-    </div>
-    <div class="layui-side layui-bg-black">
-        <div class="layui-side-scroll">
-            <ul class="layui-nav layui-nav-tree">
-                <li class="layui-nav-item">
-                    <a href="javascript:;"><i class="layui-icon layui-icon-home"></i>首页</a>
-                </li>
-                <li class="layui-nav-item layui-nav-itemed">
-                    <a href="javascript:;"><i class="layui-icon layui-icon-app"></i>实验大厅</a>
-                    <dl class="layui-nav-child">
-                        <dd><a href="javascript:;">考核实验</a></dd>
-                        <dd><a href="javascript:;">全部实验</a></dd>
-                    </dl>
-                </li>
-                <li class="layui-nav-item">
-                    <a href=""><i class="layui-icon layui-icon-survey"></i>理论测试</a>
-                </li>
-                <li class="layui-nav-item">
-                    <a href=""><i class="layui-icon layui-icon-vercode"></i>实验成绩</a>
-                </li>
-                <li class="layui-nav-item">
-                    <a href=""><i class="layui-icon layui-icon-read"></i>操作说明</a>
-                </li>
-                <li class="layui-nav-item">
-                    <a href=""><i class="layui-icon layui-icon-dialogue"></i>关于我们</a>
-                </li>
-            </ul>
-        </div>
-    </div>
+	<div class="layui-header">
+		<div class="top-logo cl">
+			<img src="../../static/new/images/sctu_w.png"/>
+			<p>旅游大数据虚拟仿真实验教学平台</p>
+			<span>实验中心</span>
+		</div>
+	</div>
+	<div class="layui-side layui-bg-black">
+		<div class="layui-side-scroll">
+			<ul class="layui-nav layui-nav-tree">
+				<li class="layui-nav-item">
+					<a href="javascript:;"><i class="layui-icon layui-icon-home"></i>首页</a>
+				</li>
+				<li class="layui-nav-item layui-nav-itemed">
+					<a href="javascript:;"><i class="layui-icon layui-icon-app"></i>实验大厅</a>
+					<dl class="layui-nav-child">
+						<dd><a href="javascript:;">考核实验</a></dd>
+						<dd><a href="javascript:;">全部实验</a></dd>
+					</dl>
+				</li>
+				<li class="layui-nav-item">
+					<a href=""><i class="layui-icon layui-icon-survey"></i>理论测试</a>
+				</li>
+				<li class="layui-nav-item">
+					<a href=""><i class="layui-icon layui-icon-vercode"></i>实验成绩</a>
+				</li>
+				<li class="layui-nav-item">
+					<a href=""><i class="layui-icon layui-icon-read"></i>操作说明</a>
+				</li>
+				<li class="layui-nav-item">
+					<a href=""><i class="layui-icon layui-icon-dialogue"></i>关于我们</a>
+				</li>
+			</ul>
+		</div>
+	</div>
 </div>
 <div class="select-cover">
-    <div class="select-error">
-        <p th:text="${emsg}"></p>
-        <p th:if="${!emsg}">学生请确认已经在本系统注册</p>
-        <p th:if="${!emsg}">老师请联系系统管理员</p>
-        <a href="/newsinfo/newslist" class="layui-btn">返回首页</a>
-    </div>
+	<div class="select-error">
+		<p th:text="${emsg}">仿真平台系统</p>
+		<!--        <p th:if="${ #lists.isEmpty(emsg)}">学生请确认已经在本系统注册</p>-->
+		<!--        <p th:if="${#lists.isEmpty(emsg)}">老师请联系系统管理员</p>-->
+		<a href="/newsinfo/newslist" class="layui-btn">返回首页</a>
+	</div>
 </div>
 <script src="//cdn.staticfile.org/jquery/1.8.0/jquery.min.js"></script>
 <script src="//cdn.staticfile.org/layui/2.5.6/layui.all.min.js"></script>
