--- a/src/main/resources/templates/kuangjia/select.html
+++ b/src/main/resources/templates/kuangjia/select.html
@@ -1,83 +1,87 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="x-ua-compatible" content="IE=edge,chrome=1" />
-		<meta name="renderer" content="webkit" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>选择课程 - 旅游大数据虚拟仿真实验教学平台</title>
-		<link rel="stylesheet" href="../../static/new/css/reset.css" />
-		<link rel="stylesheet" href="//cdn.staticfile.org/bxslider/4.2.15/jquery.bxslider.min.css" />
-		<link rel="stylesheet" href="//cdn.staticfile.org/layui/2.5.6/css/layui.min.css" />
-		<link rel="stylesheet" href="../../static/new/css/select.css" />
-	</head>
-	<body>
-		<div class="layui-layout layui-layout-admin">
-			<div class="layui-header">
-				<div class="top-logo cl">
-					<img src="../../static/new/images/sctu_w.png" />
-					<p>旅游大数据虚拟仿真实验教学平台</p>
-					<span>实验中心</span>
-				</div>
-				<div class="top-link"><a href="#">退出登录</a></div>
-			</div>
-			<div class="layui-side layui-bg-black">
-				<div class="layui-side-scroll">
-					<ul class="layui-nav layui-nav-tree">
-						<li class="layui-nav-item">
-							<a href="javascript:;"><i class="layui-icon layui-icon-home"></i>首页</a>
-						</li>
-						<li class="layui-nav-item layui-nav-itemed">
-							<a href="javascript:;"><i class="layui-icon layui-icon-app"></i>实验大厅</a>
-							<dl class="layui-nav-child">
-								<dd><a href="javascript:;">考核实验</a></dd>
-								<dd><a href="javascript:;">全部实验</a></dd>
-							</dl>
-						</li>
-						<li class="layui-nav-item">
-							<a href=""><i class="layui-icon layui-icon-survey"></i>理论测试</a>
-						</li>
-						<li class="layui-nav-item">
-							<a href=""><i class="layui-icon layui-icon-vercode"></i>实验成绩</a>
-						</li>
-						<li class="layui-nav-item">
-							<a href=""><i class="layui-icon layui-icon-read"></i>操作说明</a>
-						</li>
-						<li class="layui-nav-item">
-							<a href=""><i class="layui-icon layui-icon-dialogue"></i>关于我们</a>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</div>
-		<div class="select-cover">
-			<div class="select-title">请选择课程</div>
-			<div class="select-section">
-				<div class="lessions-slide">
-					<div class="slide" th:each="courseInfo:${courseInfoList}">
-						<div>开始时间：<span th:text="${#dates.format(courseInfo.arrangeStart,'yyyy-MM-dd HH:mm:ss')}"></span></div>
-						<div>结束时间：<span th:text="${#dates.format(courseInfo.arrangeEnd,'yyyy-MM-dd HH:mm:ss')}"></span></div>
-						<div>上课地点：<span th:text="${courseInfo.skAddress}"></span></div>
-						<div class="lession-item">
-							<img src="../../static/new/images/c1.jpg" th:src="@{'/upload/'+${courseInfo.courseImgurl}}" />
-							<p th:text="${courseInfo.courseName}">某某课程名称</p>
-						</div>
-						<div class="select-btn"><a th:href="@{|/newsinfo/shiyan/${courseInfo.courseInfoId}|}">进入课程</a>></div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<script src="//cdn.staticfile.org/jquery/1.8.0/jquery.min.js"></script>
-		<script src="//cdn.staticfile.org/layui/2.5.6/layui.all.min.js"></script>
-		<script src="//cdn.staticfile.org/bxslider/4.2.15/jquery.bxslider.min.js"></script>
-		<script>
-			$(function () {
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="x-ua-compatible" content="IE=edge,chrome=1" />
+        <meta name="renderer" content="webkit" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>选择课程 - 旅游大数据虚拟仿真实验教学平台</title>
+        <link rel="stylesheet" href="../../static/new/css/reset.css" />
+        <link rel="stylesheet" href="//cdn.staticfile.org/bxslider/4.2.15/jquery.bxslider.min.css" />
+        <link rel="stylesheet" href="//cdn.staticfile.org/layui/2.5.6/css/layui.min.css" />
+        <link rel="stylesheet" href="../../static/new/css/select.css" />
+    </head>
+    <body>
+        <div class="layui-layout layui-layout-admin">
+            <div class="layui-header">
+                <div class="top-logo cl">
+                    <img src="../../static/new/images/sctu_w.png" />
+                    <p>旅游大数据虚拟仿真实验教学平台</p>
+                    <span>实验中心</span>
+                </div>
+                <div class="top-link"><a href="#">退出登录</a></div>
+            </div>
+            <div class="layui-side layui-bg-black">
+                <div class="layui-side-scroll">
+                    <ul class="layui-nav layui-nav-tree">
+                        <li class="layui-nav-item">
+                            <a href="javascript:;"><i class="layui-icon layui-icon-home"></i>首页</a>
+                        </li>
+                        <li class="layui-nav-item layui-nav-itemed">
+                            <a href="javascript:;"><i class="layui-icon layui-icon-app"></i>实验大厅</a>
+                            <dl class="layui-nav-child">
+                                <dd><a href="javascript:;">考核实验</a></dd>
+                                <dd><a href="javascript:;">全部实验</a></dd>
+                            </dl>
+                        </li>
+                        <li class="layui-nav-item">
+                            <a href=""><i class="layui-icon layui-icon-survey"></i>理论测试</a>
+                        </li>
+                        <li class="layui-nav-item">
+                            <a href=""><i class="layui-icon layui-icon-vercode"></i>实验成绩</a>
+                        </li>
+                        <li class="layui-nav-item">
+                            <a href=""><i class="layui-icon layui-icon-read"></i>操作说明</a>
+                        </li>
+                        <li class="layui-nav-item">
+                            <a href=""><i class="layui-icon layui-icon-dialogue"></i>关于我们</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="select-cover">
+            <div class="select-area">
+                <div class="select-title">请选择课程</div>
+                <div class="select-section">
+                    <div class="lessions-slide">
+                        <div class="slide" th:each="courseInfo:${courseInfoList}">
+                            <div class="lession-item">
+                                <p class="lession-title" th:text="${courseInfo.courseName}">某某课程名称</p>
+                                <img class="lession-cover" src="../../static/new/images/c1.jpg" th:src="@{'/upload/'+${courseInfo.courseImgurl}}" />
+                                <div class="lession-infos">
+                                    <p th:text="|上课地点：${courseInfo.skAddress}|">上课地点：二教楼305室</p>
+                                    <p th:text="|开始时间：${#dates.format(courseInfo.arrangeStart,'yyyy-MM-dd HH:mm:ss')}|">开始时间：2020-12-12 12:12:12</p>
+                                    <p th:text="|结束时间：${#dates.format(courseInfo.arrangeEnd,'yyyy-MM-dd HH:mm:ss')}|">结束时间：2020-12-12 12:12:12</p>
+                                </div>
+                            </div>
+                            <div class="select-btn"><a th:href="@{|/newsinfo/shiyan/${courseInfo.courseInfoId}|}" class="layui-btn">进入课程</a></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <script src="//cdn.staticfile.org/jquery/1.8.0/jquery.min.js"></script>
+        <script src="//cdn.staticfile.org/layui/2.5.6/layui.all.min.js"></script>
+        <script src="//cdn.staticfile.org/bxslider/4.2.15/jquery.bxslider.min.js"></script>
+        <script>
+            $(function () {
                 if ($('.slide').length >= 4) {
                     $('.lessions-slide').bxSlider({ pager: false, minSlides: 4, maxSlides: 4, moveSlides: 1, slideWidth: 285, slideMargin: 20 })
                 } else {
                     $('.lessions-slide').addClass('not-slide')
                 }
-			})
-		</script>
-	</body>
+            })
+        </script>
+    </body>
 </html>
