实验大厅和平台管理加入退出链接

--- a/src/main/resources/templates/kuangjia/shiyan.html
+++ b/src/main/resources/templates/kuangjia/shiyan.html
@@ -18,7 +18,7 @@
 					<p>旅游大数据虚拟仿真实验教学平台</p>
 					<span>实验中心</span>
 				</div>
-				<div class="top-link"><a href="#">退出登录</a></div>
+				<div class="top-link"><a href="/logout">退出登录</a></div>
 			</div>
 			<div class="layui-side layui-bg-black">
 				<div class="layui-side-scroll">
