--- a/src/main/resources/templates/kuangjia/frame.html
+++ b/src/main/resources/templates/kuangjia/frame.html
@@ -58,6 +58,7 @@
 								<dd><a class="to-url" data-url="/reportScoreManage/list" href="javascript:;">模块报告成绩管理</a></dd>
 								<dd><a class="to-url" data-url="/lastTestScoreManage/list" href="javascript:;">课程理论测试成绩管理</a></dd>
 								<dd><a class="to-url" data-url="/totalscore/list" href="javascript:;">学生总评成绩管理</a></dd>
+								<dd><a class="to-url" data-url="/expmodel/kaoheProgress" href="javascript:;">考核进度</a></dd>
 							</dl>
 						</li>
 						</shiro:hasAnyRoles>
